/**
* @version $Id$
* @package FrontAccounting
* @copyright (C) 2005 - 2011 FrontAccounting, LLC
* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2014-04-08 Joe                Sending location email when below reorder also in Itmes Transfer and Adjustment
2014-04-05 Joe                Selecting the cancel button in confirming the voiding of document did not work properly + Rerun
2014-04-03 Joe                Bad elseif sentence in items.php (image upload)

2014-03-14 Ap.Muthu           Forum Fixes INNER JOINs ** Not in Official Repo As yet ** - sales/includes/db/cust_trans_db.inc, gl/includes/db/gl_db_bank_trans.inc

2014-03-12 Joe                Changed decimal places in preferences to be number lists.

2013-12-30 Ap.Muthu           query_size to unsigned in users table ** Not in Official Repo As yet ** - sql/alter2.3.sql, en_US-demo.sql, en_US-new.sql
2013-11-23 Ap.Muthu           Slow Query Fix ** Not fully in Official Repo As yet ** (2014-04-05 Update) - sql/alter2.3.sql, en_US-demo.sql, en_US-new.sql

2014-03-10 10:58 +0100 Joe
(3367) Release 2.3.20
 version.php

2014-03-10 10:18 +0100 Janusz Dobrowolski
(3366) Gettext template update.
 lang/new_language_template/LC_MESSAGES/empty.po

2014-03-07 00:57 +0100 Janusz Dobrowolski
(3365) Fixed security issues in file uploads.
 admin/attachments.php
 admin/company_preferences.php
 admin/inst_lang.php
 includes/main.inc
 inventory/includes/inventory_db.inc

2014-03-10 10:15 +0100 Joe
(3364) fixed a check that company logo exists when using header3.
 reporting/includes/pdf_report.inc

2014-02-07 09:02 +0100 Joe
(3363) If no memo on GL line in GL account inquiry, the comments for the voucher is shown on the line.
 gl/inquiry/gl_account_inquiry.php

2014-02-07 01:13 +0100 Joe
(3362) Supplier info not shown on gl inquiry for bank account.
 purchasing/includes/db/supp_payment_db.inc
